--- a/www/style/less/start-page.less
+++ b/www/style/less/start-page.less
@@ -5,9 +5,9 @@
     .bg  {
         width: 100%;
         height: 100%;
-        background: url('../img/bg-start-page.png') no-repeat;
-        background-size: cover;
-        background-position: center;
+        // background: url('../img/bg-start-page.png') no-repeat;
+        // background-size: cover;
+        // background-position: center;
     }
     .container {
         padding: 125px 15px 0 15px;
