Hide social block on all pages

--- a/www/style/less/start-page.less
+++ b/www/style/less/start-page.less
@@ -24,6 +24,9 @@
             display: none;
         }
         .social {
+            // Hide social block
+            display: none;
+
             gap: 24px;
             margin: 60px auto 30px auto;
             position: unset;
