--- a/www/style/less/style.less
+++ b/www/style/less/style.less
@@ -415,6 +415,9 @@ h1 {
 }
 
 .social {
+    // Hide social block
+    display: none !important;
+
     position: fixed;
     right: 50px;
     bottom: 40px;
